[gd_scene load_steps=7 format=3 uid="uid://bcuq3veu0kx2k"]

[ext_resource type="Script" uid="uid://sh2qms5hxqx3" path="res://scenes/DataQuestion/opens_row.gd" id="1_nbjlh"]
[ext_resource type="PackedScene" uid="uid://caiqur14kros3" path="res://scenes/DataQuestion/opens_alt_set.tscn" id="2_arib2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eoayo"]
bg_color = Color(0.00784314, 0.313726, 0.764706, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0rm0x"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vwqmk"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wgsi8"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.76, 0.00759999, 0.00759999, 1)

[node name="Row" type="HBoxContainer"]
theme_override_constants/separation = 0
script = ExtResource("1_nbjlh")
alt_scene = ExtResource("2_arib2")

[node name="Answer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Set" type="HBoxContainer" parent="Answer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="AddAlt" type="Button" parent="Answer/Set"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_eoayo")
text = "Alt"

[node name="Text" type="TextEdit" parent="Answer/Set"]
clip_contents = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_placeholder_color = Color(0.216, 0.1952, 0.32, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxEmpty_0rm0x")
placeholder_text = "And what is the answer to that question?"
scroll_fit_content_height = true

[node name="Background" type="Panel" parent="Answer/Set/Text"]
show_behind_parent = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vwqmk")

[node name="DeleteAnswer" type="Button" parent="Answer/Set"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_wgsi8")
text = "-"

[node name="Alts" type="VBoxContainer" parent="Answer"]
layout_mode = 2

[connection signal="pressed" from="Answer/Set/AddAlt" to="." method="_on_add_alt_pressed"]
[connection signal="pressed" from="Answer/Set/DeleteAnswer" to="." method="_on_delete_answer_pressed"]
